--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
@@ -82,6 +82,10 @@
       <Project>{9916839C-39FC-4CEB-A5AF-89CA7E87119F}</Project>
       <Name>Orchard.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Orchard.Fields\Orchard.Fields.csproj">
+      <Project>{3787dde5-e5c8-4841-bda7-dcb325388064}</Project>
+      <Name>Orchard.Fields</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drivers\HighlightableItemPartDriver.cs" />
