--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Placement.info">
