--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -59,6 +59,19 @@
       <HintPath>..\..\..\lib\aspnetmvc\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LccNetworkTheme\Web.config" />
+    <Content Include="LccNetworkTheme\Scripts\Web.config" />
+    <Content Include="LccNetworkTheme\Styles\Web.config" />
+    <Content Include="LccNetworkTheme\Content\Web.config" />
+    <Content Include="LccNetworkTheme\Theme.txt" />
+    <Content Include="LccNetworkTheme\Theme.png" />
+    <Content Include="LccNetworkTheme\Placement.info" />
+    <Folder Include="LccNetworkTheme\Content" />
+    <Folder Include="LccNetworkTheme\Styles" />
+    <Folder Include="LccNetworkTheme\Scripts" />
+    <Folder Include="LccNetworkTheme\Views" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrap_3_1_1_SimpleBlog\ListShapeProvider.cs" />
