--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Exports\export-testData-20140730.xml" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Web.config" />
