--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
@@ -68,15 +68,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Exports\export-testData-20140730.xml" />
+    <Content Include="Recipes\lccnetwork-site-settings.recipe.xml" />
+    <Content Include="Recipes\lccnetwork-data.recipe.xml" />
+    <Content Include="Recipes\lccnetwork-metadata.recipe.xml" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Web.config" />
     <Content Include="Properties\AssemblyInfo.cs" />
     <Content Include="Module.txt" />
     <Content Include="_Resources\Lccs-Taxonomy-Terms.txt" />
+    <Content Include="Recipes\lccnetwork-features.recipe.xml" />
     <Content Include="_Resources\Resources-Taxonomy-Terms.txt" />
     <Content Include="_Resources\WorkAreas-Taxonomy-Terms.txt" />
-    <Content Include="_Resources\Recipe-Requirements.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Orchard\Orchard.Framework.csproj">
@@ -106,7 +109,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Recipes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Placement.info">
