--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\bootstrap.min.css" />
     <Content Include="LccNetwork.Bootstrap\Styles\Theme.css" />
     <Content Include="LccNetwork.Bootstrap\Web.config" />
     <Content Include="LccNetwork.Bootstrap\Scripts\Web.config" />
@@ -426,6 +427,50 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LccNetwork.Bootstrap\Views\WorkItemCarousel.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LccNetwork.Bootstrap\Styles\Site\Less\_workitem-carousel.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\alerts.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\badges.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\bootstrap.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\breadcrumbs.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\button-groups.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\buttons.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\carousel.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\close.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\code.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\component-animations.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\dropdowns.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\forms.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\glyphicons.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\grid.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\input-groups.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\jumbotron.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\labels.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\list-group.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\media.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\mixins.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\modals.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\navbar.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\navs.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\normalize.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\pager.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\pagination.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\panels.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\popovers.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\print.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\progress-bars.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\responsive-utilities.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\scaffolding.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\tables.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\theme.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\thumbnails.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\tooltip.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\type.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\utilities.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\variables.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\wells.less" />
+    <None Include="LccNetwork.Bootstrap\Styles\Theme.less" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
