--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -62,6 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\bootstrap.min.css" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\variables.css">
+      <DependentUpon>variables.less</DependentUpon>
+    </Content>
     <Content Include="LccNetwork.Bootstrap\Styles\Theme.css" />
     <Content Include="LccNetwork.Bootstrap\Web.config" />
     <Content Include="LccNetwork.Bootstrap\Scripts\Web.config" />
@@ -263,6 +266,10 @@
       <Project>{2D1D92BB-4555-4CBE-8D0E-63563D6CE4C6}</Project>
       <Name>Orchard.Framework</Name>
       <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\Modules\Orchard.Widgets\Orchard.Widgets.csproj">
+      <Project>{194d3ccc-1153-474d-8176-fde8d7d0d0bd}</Project>
+      <Name>Orchard.Widgets</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -471,6 +478,8 @@
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\variables.less" />
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\wells.less" />
     <None Include="LccNetwork.Bootstrap\Styles\Theme.less" />
+    <Content Include="LccNetwork.Bootstrap\Views\LatestNewsProjection.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Widget.Wrapper.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
