--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Web.config
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Web.config
@@ -38,4 +38,12 @@
     </compilation>
   </system.web>
 
+  <system.webServer>
+    <staticContent>
+      <!--The mimeMaps only have to be in the base theme not the child themes.-->
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
+    </staticContent>
+  </system.webServer>
+
 </configuration>
