--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Bootstrap_3_1_1_Base.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Bootstrap_3_1_1_Base.csproj
@@ -76,6 +76,9 @@
     <Content Include="Styles\Bootstrap\less\bootstrap.css">
       <DependentUpon>bootstrap.less</DependentUpon>
     </Content>
+    <Content Include="Styles\Bootstrap\less\bootstrap.min.css">
+      <DependentUpon>bootstrap.less</DependentUpon>
+    </Content>
     <Content Include="Styles\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Styles\Bootstrap\less\alerts.less" />
     <Content Include="Styles\Bootstrap\less\badges.less" />
