--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -61,18 +61,35 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\variables.css">
-      <DependentUpon>variables.less</DependentUpon>
-    </Content>
-    <Content Include="LccNetwork.Bootstrap\Styles\Site\Imgs\banner_graphic.jpg" />
-    <Content Include="LccNetwork.Bootstrap\Styles\Site\Imgs\icon_arrow_br.png" />
-    <Content Include="LccNetwork.Bootstrap\Styles\Site\Imgs\icon_arrow_or.png" />
-    <Content Include="LccNetwork.Bootstrap\Styles\Site\Imgs\icon_arrow_w.png" />
-    <Content Include="LccNetwork.Bootstrap\Styles\Site\Imgs\lcc-logo.png" />
     <Content Include="LccNetwork.Bootstrap\Styles\Theme.css" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme.min.css">
+      <DependentUpon>Theme.less</DependentUpon>
+    </Content>
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\banner_graphic.jpg" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\icon_arrow_br.png" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\icon_arrow_or.png" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\icon_arrow_w.png" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\icon_fb.png" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\icon_flickr.png" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\icon_rss.png" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\icon_twitter.png" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Imgs\lcc-logo.png" />
     <Content Include="LccNetwork.Bootstrap\Views\Branding.cshtml" />
     <Content Include="LccNetwork.Bootstrap\Views\BadgeOfHonor.cshtml" />
-    <Content Include="LccNetwork.Bootstrap\Styles\Site\Less\_mixins.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Less\_mixins.less" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Boolean.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\DateTime.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Enumeration.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Input.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Link.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Numeric.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\buttons.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\scaffolding.less" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Link-facebook.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Link-flickr.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Link-rss.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\Fields\Link-twitter.cshtml" />
     <None Include="LccNetwork.Bootstrap\Views\SpotlightProjection.cshtml" />
     <Content Include="LccNetwork.Bootstrap\Web.config" />
     <Content Include="LccNetwork.Bootstrap\Scripts\Web.config" />
@@ -266,6 +283,10 @@
       <Name>Orchard.Framework</Name>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\Modules\Orchard.Fields\Orchard.Fields.csproj">
+      <Project>{3787dde5-e5c8-4841-bda7-dcb325388064}</Project>
+      <Name>Orchard.Fields</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Modules\Orchard.Widgets\Orchard.Widgets.csproj">
       <Project>{194d3ccc-1153-474d-8176-fde8d7d0d0bd}</Project>
       <Name>Orchard.Widgets</Name>
@@ -434,12 +455,11 @@
     <Content Include="LccNetwork.Bootstrap\Views\WorkItemCarousel.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="LccNetwork.Bootstrap\Styles\Site\Less\_workitem-carousel.less" />
+    <Content Include="LccNetwork.Bootstrap\Styles\Theme\Less\_workitem-carousel.less" />
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\grid.less" />
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\mixins.less" />
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\utilities.less" />
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\variables.less" />
-    <None Include="LccNetwork.Bootstrap\Styles\Theme.less" />
     <Content Include="LccNetwork.Bootstrap\Views\LatestNewsProjection.cshtml" />
     <Content Include="LccNetwork.Bootstrap\Views\Widget.Wrapper.cshtml" />
     <Content Include="LccNetwork.Bootstrap\Views\UpcomingEventsProjection.cshtml" />
