--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -89,7 +89,12 @@
     <Content Include="LccNetwork.Bootstrap\Views\Fields\Link-flickr.cshtml" />
     <Content Include="LccNetwork.Bootstrap\Views\Fields\Link-rss.cshtml" />
     <Content Include="LccNetwork.Bootstrap\Views\Fields\Link-twitter.cshtml" />
-    <None Include="LccNetwork.Bootstrap\Views\SpotlightProjection.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionPageMeetings.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionPageFunding.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionPageNews.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionPageEvents.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionPageResources.cshtml" />
+    <None Include="LccNetwork.Bootstrap\Views\ProjectionWidgetSpotlight.cshtml" />
     <Content Include="LccNetwork.Bootstrap\Web.config" />
     <Content Include="LccNetwork.Bootstrap\Scripts\Web.config" />
     <Content Include="LccNetwork.Bootstrap\Styles\Web.config" />
@@ -97,6 +102,7 @@
     <Content Include="LccNetwork.Bootstrap\Theme.txt" />
     <Content Include="LccNetwork.Bootstrap\Theme.png" />
     <Content Include="LccNetwork.Bootstrap\Placement.info" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionPageStaff.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrap_3_1_1_SimpleBlog\ListShapeProvider.cs" />
@@ -451,7 +457,7 @@
     <Folder Include="Bootstrap_3_1_1_SimpleBlog\obj\Release\TempPE\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="LccNetwork.Bootstrap\Views\WorkItemCarousel.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionWidgetWorkItemCarousel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LccNetwork.Bootstrap\Styles\Theme\Less\_workitem-carousel.less" />
@@ -459,9 +465,9 @@
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\mixins.less" />
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\utilities.less" />
     <Content Include="LccNetwork.Bootstrap\Styles\Bootstrap\less\variables.less" />
-    <Content Include="LccNetwork.Bootstrap\Views\LatestNewsProjection.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionWidgetLatestNews.cshtml" />
     <Content Include="LccNetwork.Bootstrap\Views\Widget.Wrapper.cshtml" />
-    <Content Include="LccNetwork.Bootstrap\Views\UpcomingEventsProjection.cshtml" />
+    <Content Include="LccNetwork.Bootstrap\Views\ProjectionWidgetUpcomingEvents.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
