--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/LccNetwork.Bootstrap.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/LccNetwork.Bootstrap.csproj
@@ -91,6 +91,8 @@
     <Content Include="Theme.txt" />
     <Content Include="Theme.png" />
     <Content Include="Placement.info" />
+    <Content Include="_ReadMe\Todo-DetailPages.txt" />
+    <Content Include="_ReadMe\Todo-Misc.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Orchard\Orchard.Framework.csproj">
@@ -100,6 +102,10 @@
     <ProjectReference Include="..\..\Core\Orchard.Core.csproj">
       <Project>{9916839C-39FC-4CEB-A5AF-89CA7E87119F}</Project>
       <Name>Orchard.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Orchard.Fields\Orchard.Fields.csproj">
+      <Project>{3787dde5-e5c8-4841-bda7-dcb325388064}</Project>
+      <Name>Orchard.Fields</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Modules\Orchard.MediaLibrary\Orchard.MediaLibrary.csproj">
       <Project>{73a7688a-5bd3-4f7e-adfa-ce36c5a10e3b}</Project>
@@ -131,6 +137,7 @@
     <Content Include="Views\Widget.Wrapper.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\MyConstants.cs" />
     <Compile Include="Extensions\MyFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -149,7 +156,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Fields\Boolean.cshtml" />
-    <Content Include="Views\Fields\DateTime.cshtml" />
     <Content Include="Views\Fields\Enumeration.cshtml" />
     <Content Include="Views\Fields\Input.cshtml" />
     <Content Include="Views\Fields\Link-facebook.cshtml" />
@@ -169,10 +175,22 @@
     <Content Include="Views\Media-Image.ResizedThumbnail.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\ProjectionPageConservationNeeds.cshtml" />
+    <Content Include="Views\ProjectionPageAnnualReports.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\ProjectionPageAnnualReports.cshtml" />
+    <Content Include="Views\Fields\DateTime.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\Document.Summary.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fields\MediaLibraryPicker.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Theme\Less\_council-meeting.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fields\Common.Text.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
