--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/LccNetwork.csproj
@@ -97,7 +97,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\FindAnLccController.cs" />
+    <Compile Include="Controllers\StaticPages.cs" />
     <Compile Include="Drivers\HighlightableItemPartDriver.cs" />
     <Compile Include="Drivers\HighlightedItemPartDriver.cs" />
     <Compile Include="Handlers\HighlightableItemPartHandler.cs" />
@@ -111,7 +111,7 @@
     <Compile Include="ViewModels\HighlightedItemPartViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\FindAnLcc\Index.cshtml" />
+    <Content Include="Views\StaticPages\FindAnLcc.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Placement.info">
@@ -129,12 +129,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Content.Highlight.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Parts\MenuWidget-SectionMenu.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Parts\MenuWidget-FooterMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Web.config">
