Refactor Spotlight to avoid BuildDisplay.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/LccNetwork.Bootstrap.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/LccNetwork.Bootstrap.csproj
@@ -186,7 +186,7 @@
     <Content Include="Views\Parts\Document.Summary.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Fields\MediaLibraryPicker.cshtml" />
+    <Content Include="Views\Fields\MediaLibraryPicker-Spotlight.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Styles\Theme\Less\_council-meeting.less" />
@@ -199,6 +199,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Parts\MenuWidget-SectionMenu.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\Title-Spotlight.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
