Use image hack in spotlight.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/LccNetwork.Bootstrap.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/LccNetwork.Bootstrap.csproj
@@ -205,7 +205,7 @@
     <Content Include="Views\Fields\MediaLibraryPicker-WorkItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\_MediaPartHack.cshtml" />
+    <Content Include="Views\_MediaImageHack.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
